--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
-theme: jekyll-theme-architect
+# basic options
+title: Upendra Pratap Kushwaha
+author: upendra243
+email: upendrapratap001@gmail.com
+description: My personal blog
+twitter_username: upi653
+github_username:  upendra243
+
+# Build settings
+markdown: kramdown
+theme: minima
